syntax = "proto3";

package blocks;

import "pointers.proto";
import "common.proto";

enum ConsensusType {
  UNKNOWN_CONSENSUS_TYPE = 0;
  GENESIS = 1;
  POA_CONSENSUS = 2;
}

message Block {
  pointers.BlockPointer pointer = 1;
  BlockData data = 2;
  common.BlockMetadata metadata = 3;
}

message BlockData {
  string version = 1;
  int32 id = 2;
  BlockHeader header = 4;
  ConsensusType consensus_type = 5;
  oneof consensus { 
    BlockConsensusGenesis genesis = 6;
    BlockConsensusPoa poa = 7;
  }
  repeated string transaction_ids = 8;
}

message BlockHeader {
  string version = 1;
  string id = 2;
  int64 chain_id = 3;
  string producer = 4;
  int64 height = 5;
  int64 da_height = 6;
  int32 consensus_parameters_version = 7;
  int32 state_transition_bytecode_version = 8;
  int32 transactions_count = 9;
  int32 message_receipt_count = 10;
  string transactions_root = 11;
  string message_outbox_root = 12;
  string event_inbox_root = 13;
  string prev_root = 14;
  int64 time = 15;
  string application_hash = 16;
}

message BlockConsensusGenesis {
  string chain_config_hash = 1;
  string coins_root = 2;
  string contracts_root = 3;
  string messages_root = 4;
  string transactions_root = 5;
}

message BlockConsensusPoa {
  string signature = 1;
}